--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -16,54 +16,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import scipy as sp"
+    "import scipy as sp\n",
+    "import ode"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "q_0 = 10\n",
-    "p_0 = 1\n",
-    "u_0 = 0\n",
+    "q_0 = np.array([[0],[2]])\n",
+    "p_0 = np.array([[1],[4]])\n",
+    "u_0 = np.array([[2]])\n",
     "\n",
-    "ts=range(0,10)"
+    "t_start = 0\n",
+    "t_end =  1\n",
+    "\n",
+    "integrateTol = 10**-3\n",
+    "integrateMaxIter = 4\n",
+    "state_dim = 2\n",
+    "Gamma = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.],\n",
+       "       [1.]])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ones(np.shape(q_0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def H_T_p(q,p,u):\n",
-    "    return 1\n",
+    "    # for q-dot\n",
+    "    return np.ones(np.shape(q))\n",
     "\n",
     "def H_T_q(q,p,u):\n",
-    "    return 1\n",
+    "    # for p-dot\n",
+    "    return np.ones(np.shape(p))\n",
     "    \n",
     "def Q_u(q,p,u):\n",
-    "    return 1\n",
+    "    # for u-dot\n",
+    "    return np.ones(np.shape(u))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rhs(t, qpu_vec, **kwargs):\n",
+    "    '''\n",
+    "    Input: qpu_vec\n",
+    "    \n",
+    "    Output: qpu_vec\n",
+    "    '''\n",
+    "    state_dim = kwargs['state_dim']\n",
+    "    Gamma = kwargs['Gamma']\n",
+    "    q = qpu_vec[:state_dim]\n",
+    "    p = qpu_vec[state_dim:2*state_dim]\n",
+    "    u = qpu_vec[2*state_dim:]\n",
+    "    q_dot =  H_T_p(q,p,u)\n",
+    "    p_dot = -1*H_T_q(q,p,u)\n",
+    "    u_dot = -Gamma*Q_u(q,p,u)\n",
+    "    return np.vstack([q_dot, p_dot, u_dot])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1]\n",
+      " [4]\n",
+      " [2]]\n",
+      "[[1]\n",
+      " [4]]\n",
+      "[[0]\n",
+      " [2]\n",
+      " [1]\n",
+      " [4]\n",
+      " [2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.vstack([q_0, p_0, u_0])[2:]\n",
+    "print np.vstack([q_0, p_0, u_0])[2:2*2]\n",
+    "print np.vstack([q_0, p_0, u_0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -79,7 +167,54 @@
     "ODE takes as input:\n",
     "- RHS\n",
     "- initial condition\n",
-    "- series of time values t, for which you want your desired output values"
+    "- t_start and t_end for which you want your desired output values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#     q = qpu_vec[:state_dim]\n",
+    "#     p = qpu_vec[state_dim:2*state_dim]\n",
+    "#     u = qpu_vec[2*state_dim:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ode error: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array([[0],\n",
+       "        [2],\n",
+       "        [1],\n",
+       "        [4],\n",
+       "        [2]]), array([0]), True, 1)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec = np.vstack([q_0, p_0, u_0])\n",
+    "ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)"
    ]
   },
   {
