Fixed one bug:     - remember that the state and control vectors should be 1xn and 1xm, respectively.  They should not be column vectors - should be row vectors.
However currently there is another bug I'm trying to fix:  R row vector
is zero in ode.py and I'm not sure why.

--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -36,9 +36,9 @@
    "outputs": [],
    "source": [
     "# Inputs:\n",
-    "q_0 = np.array([[0],[2]])\n",
-    "p_0 = np.array([[1],[4]])\n",
-    "u_0 = np.array([[2]])\n",
+    "q_0 = np.array([0,2])\n",
+    "p_0 = np.array([1,4])\n",
+    "u_0 = np.array([2])\n",
     "\n",
     "t_start = 0\n",
     "t_end =  1\n",
@@ -59,8 +59,7 @@
     {
      "data": {
       "text/plain": [
-       "array([[1.],\n",
-       "       [1.]])"
+       "array([1., 1.])"
       ]
      },
      "execution_count": 3,
@@ -116,7 +115,8 @@
     "    q_dot =  H_T_p(q,p,u)\n",
     "    p_dot = -1*H_T_q(q,p,u)\n",
     "    u_dot = -Gamma*Q_u(q,p,u)\n",
-    "    return np.vstack([q_dot, p_dot, u_dot])"
+    "#     import pdb; pdb.set_trace()\n",
+    "    return np.hstack([q_dot, p_dot, u_dot])"
    ]
   },
   {
@@ -130,23 +130,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1]\n",
-      " [4]\n",
-      " [2]]\n",
-      "[[1]\n",
-      " [4]]\n",
-      "[[0]\n",
-      " [2]\n",
-      " [1]\n",
-      " [4]\n",
-      " [2]]\n"
+      "[1 4 2]\n",
+      "[1 4]\n",
+      "[0 2 1 4 2]\n"
      ]
     }
    ],
    "source": [
-    "print np.vstack([q_0, p_0, u_0])[2:]\n",
-    "print np.vstack([q_0, p_0, u_0])[2:2*2]\n",
-    "print np.vstack([q_0, p_0, u_0])"
+    "print np.hstack([q_0, p_0, u_0])[2:]\n",
+    "print np.hstack([q_0, p_0, u_0])[2:2*2]\n",
+    "print np.hstack([q_0, p_0, u_0])"
    ]
   },
   {
@@ -189,31 +182,100 @@
    "metadata": {
     "collapsed": false
    },
+   "outputs": [],
+   "source": [
+    "qpu_vec = np.hstack([q_0, p_0, u_0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ode error: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
-       "(array([[0],\n",
-       "        [2],\n",
-       "        [1],\n",
-       "        [4],\n",
-       "        [2]]), array([0]), True, 1)"
+       "array([0, 2, 1, 4, 2])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qpu_vec = np.vstack([q_0, p_0, u_0])\n",
+    "qpu_vec "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(108)ode_rk23()\n",
+      "-> R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(111)ode_rk23()\n",
+      "-> R1 = max(R/yscale)\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(112)ode_rk23()\n",
+      "-> R2 = R1/tol\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(115)ode_rk23()\n",
+      "-> if (R2 < 1):\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(117)ode_rk23()\n",
+      "-> t = t+hStep\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(118)ode_rk23()\n",
+      "-> y1 = k40\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(119)ode_rk23()\n",
+      "-> k1 = k4\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(120)ode_rk23()\n",
+      "-> tTime = np.append(tTime, t)\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(121)ode_rk23()\n",
+      "-> y = np.row_stack((y, y1))\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(122)ode_rk23()\n",
+      "-> hStep = hStep* min(1.5, 0.95*math.pow(R2, -1.0/3.0)) # increasing step size\n",
+      "(Pdb) n\n",
+      "ValueError: 'math domain error'\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(122)ode_rk23()\n",
+      "-> hStep = hStep* min(1.5, 0.95*math.pow(R2, -1.0/3.0)) # increasing step size\n",
+      "(Pdb) n\n",
+      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(134)ode_rk23()\n",
+      "-> except Exception as e:\n",
+      "(Pdb) R2\n",
+      "0.0\n",
+      "(Pdb) math.pow(R2, -1.0/3.0)\n",
+      "*** ValueError: math domain error\n",
+      "(Pdb) R2\n",
+      "0.0\n",
+      "(Pdb) R2 = R1/tol\n",
+      "(Pdb) R1\n",
+      "0.0\n",
+      "(Pdb) tol\n",
+      "0.001\n",
+      "(Pdb) R2\n",
+      "0.0\n",
+      "(Pdb) max(R/yscale)\n",
+      "0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# qpu_vec = np.vstack([q_0, p_0, u_0])\n",
     "ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)"
    ]
   },
