Fixed the problem with R being all 0's: For some reason the ode_rk23 seems like it cannot handle the dynamics being all ones vectors?

--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -81,15 +81,15 @@
    "source": [
     "def H_T_p(q,p,u):\n",
     "    # for q-dot\n",
-    "    return np.ones(np.shape(q))\n",
+    "    return np.ones(np.shape(q))+q\n",
     "\n",
     "def H_T_q(q,p,u):\n",
     "    # for p-dot\n",
-    "    return np.ones(np.shape(p))\n",
+    "    return np.ones(np.shape(p))+p\n",
     "    \n",
     "def Q_u(q,p,u):\n",
     "    # for u-dot\n",
-    "    return np.ones(np.shape(u))\n",
+    "    return np.ones(np.shape(u))+u\n",
     "    "
    ]
   },
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -211,67 +211,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(108)ode_rk23()\n",
-      "-> R = abs((-5.0*k1+6.0*k2+8.0*k3-9.0*k4)*hStep)/72.0\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(111)ode_rk23()\n",
-      "-> R1 = max(R/yscale)\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(112)ode_rk23()\n",
-      "-> R2 = R1/tol\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(115)ode_rk23()\n",
-      "-> if (R2 < 1):\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(117)ode_rk23()\n",
-      "-> t = t+hStep\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(118)ode_rk23()\n",
-      "-> y1 = k40\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(119)ode_rk23()\n",
-      "-> k1 = k4\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(120)ode_rk23()\n",
-      "-> tTime = np.append(tTime, t)\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(121)ode_rk23()\n",
-      "-> y = np.row_stack((y, y1))\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(122)ode_rk23()\n",
-      "-> hStep = hStep* min(1.5, 0.95*math.pow(R2, -1.0/3.0)) # increasing step size\n",
-      "(Pdb) n\n",
-      "ValueError: 'math domain error'\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(122)ode_rk23()\n",
-      "-> hStep = hStep* min(1.5, 0.95*math.pow(R2, -1.0/3.0)) # increasing step size\n",
-      "(Pdb) n\n",
-      "> /Users/jordan/Documents/Atigeo/cdi/control_law_propagator/ode.py(134)ode_rk23()\n",
-      "-> except Exception as e:\n",
-      "(Pdb) R2\n",
-      "0.0\n",
-      "(Pdb) math.pow(R2, -1.0/3.0)\n",
-      "*** ValueError: math domain error\n",
-      "(Pdb) R2\n",
-      "0.0\n",
-      "(Pdb) R2 = R1/tol\n",
-      "(Pdb) R1\n",
-      "0.0\n",
-      "(Pdb) tol\n",
-      "0.001\n",
-      "(Pdb) R2\n",
-      "0.0\n",
-      "(Pdb) max(R/yscale)\n",
-      "0.0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([[0.        , 2.        , 1.        , 4.        , 2.        ],\n",
+       "        [0.28385417, 2.8515625 , 0.55729167, 2.89322917, 1.3359375 ]]),\n",
+       " array([0.  , 0.25]),\n",
+       " True,\n",
+       " 4)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
