--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -40,18 +40,18 @@
     "p_0 = np.array([1,4])\n",
     "u_0 = np.array([2])\n",
     "\n",
-    "t_start = 0\n",
-    "t_end =  1\n",
+    "t_start = 10\n",
+    "t_end =  11\n",
     "\n",
     "integrateTol = 10**-3\n",
-    "integrateMaxIter = 4\n",
+    "integrateMaxIter = 40\n",
     "state_dim = 2\n",
-    "Gamma = 1\n"
+    "Gamma = 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 46,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 48,
    "metadata": {
     "collapsed": true
    },
@@ -115,13 +115,12 @@
     "    q_dot =  H_T_p(q,p,u)\n",
     "    p_dot = -1*H_T_q(q,p,u)\n",
     "    u_dot = -Gamma*Q_u(q,p,u)\n",
-    "#     import pdb; pdb.set_trace()\n",
     "    return np.hstack([q_dot, p_dot, u_dot])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -144,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 50,
    "metadata": {
     "collapsed": true
    },
@@ -165,31 +164,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 51,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#     q = qpu_vec[:state_dim]\n",
-    "#     p = qpu_vec[state_dim:2*state_dim]\n",
-    "#     u = qpu_vec[2*state_dim:]"
+    "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
+    "qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "qpu_vec = np.hstack([q_0, p_0, u_0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
@@ -197,21 +184,22 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 1, 4, 2])"
+       "array([ 1.71656809,  7.14970426, -0.26496265,  0.83759338,  0.10255603])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qpu_vec "
+    "# only take last value\n",
+    "qpu_vec_i[-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -219,21 +207,196 @@
     {
      "data": {
       "text/plain": [
-       "(array([[0.        , 2.        , 1.        , 4.        , 2.        ],\n",
-       "        [0.28385417, 2.8515625 , 0.55729167, 2.89322917, 1.3359375 ]]),\n",
-       " array([0.  , 0.25]),\n",
-       " True,\n",
-       " 4)"
+       "[0, 10]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# qpu_vec = np.vstack([q_0, p_0, u_0])\n",
-    "ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)"
+    "range(0,20,(20-0)/2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 2, 3]\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# inputs\n",
+    "t_0 = 0\n",
+    "T =  4\n",
+    "K=2\n",
+    "print range(t_0,T,(T-t_0)/(2*K))\n",
+    "\n",
+    "# end inputs\n",
+    "qs=[]\n",
+    "ps=[]\n",
+    "us=[]\n",
+    "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
+    "ts = range(t_0,T,(T-t_0)/(2*K))\n",
+    "for i in range(len(ts)-1):\n",
+    "    t_start, t_end = ts[i], ts[i+1]\n",
+    "    qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "    qpu_vec = qpu_vec_i[-1]\n",
+    "    print t_end\n",
+    "    qs.append(qpu_vec[:state_dim])\n",
+    "    ps.append(qpu_vec[state_dim:2*state_dim])\n",
+    "    us.append(qpu_vec[2*state_dim:])\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([1.71656809, 7.14970426]),\n",
+       " array([ 6.37867051, 21.13601153]),\n",
+       " array([19.03713547, 59.1114064 ])]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([-0.26496265,  0.83759338]),\n",
+       " array([-0.72993435, -0.32483587]),\n",
+       " array([-0.90081606, -0.75204015])]"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Triangle window filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print K\n",
+    "weights_0 = [float(i)/K for i in range(1,K+1)]  \n",
+    "weights_1 = [2-(float(i)/K) for i in range(K+1,(2*K)+1)] \n",
+    "# sanity check \n",
+    "assert len(weights_0)==len(weights_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5, 1.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print weights_0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.5, 0.0]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print weights_1"
    ]
   },
   {
