--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 129,
    "metadata": {
     "collapsed": false
    },
@@ -240,8 +240,8 @@
    "source": [
     "# inputs\n",
     "t_0 = 0\n",
-    "T =  4\n",
-    "K=2\n",
+    "T = 4\n",
+    "K = 2\n",
     "print range(t_0,T,(T-t_0)/(2*K))\n",
     "\n",
     "# end inputs\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +276,7 @@
        " array([19.03713547, 59.1114064 ])]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +300,7 @@
        " array([-0.90081606, -0.75204015])]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -322,7 +322,7 @@
        "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 147,
    "metadata": {
     "collapsed": false
    },
@@ -356,14 +356,15 @@
    "source": [
     "print K\n",
     "weights_0 = [float(i)/K for i in range(1,K+1)]  \n",
-    "weights_1 = [2-(float(i)/K) for i in range(K+1,(2*K)+1)] \n",
+    "weights_1 = [2-(float(i)/K) for i in range(K+1,(2*K)+1)]\n",
     "# sanity check \n",
-    "assert len(weights_0)==len(weights_1)"
+    "assert len(weights_0)==len(weights_1)\n",
+    "weights = weights_0+weights_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 148,
    "metadata": {
     "collapsed": false
    },
@@ -372,31 +373,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.5, 1.0]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print weights_0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 128,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "[0.5, 1.0]\n",
       "[0.5, 0.0]\n"
      ]
     }
    ],
    "source": [
+    "print weights_0\n",
     "print weights_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([1.71656809, 7.14970426]), array([ 6.37867051, 21.13601153]), array([19.03713547, 59.1114064 ])]\n",
+      "[0.5, 1.0, 0.5]\n",
+      "[array([0.85828404, 3.57485213]), array([ 6.37867051, 21.13601153]), array([ 9.51856773, 29.5557032 ])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print qs\n",
+    "print weights[:-1]\n",
+    "qs_weighted = [q*w for q,w in zip(qs, weights[:-1])]\n",
+    "print qs_weighted"
    ]
   },
   {
@@ -406,7 +414,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print 'okay, weights have been applied.  Now just remember that this DOES not include the first and last values because those have a weight of 0'"
+   ]
   }
  ],
  "metadata": {
