The q p and u vectors have been appropriately weighted in the triangle window filter.

--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 198,
    "metadata": {
     "collapsed": false
    },
@@ -230,10 +230,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0, 1, 2, 3]\n",
-      "1\n",
-      "2\n",
-      "3\n"
+      "[0, 1, 2, 3, 4]\n"
      ]
     }
    ],
@@ -242,28 +239,32 @@
     "t_0 = 0\n",
     "T = 4\n",
     "K = 2\n",
-    "print range(t_0,T,(T-t_0)/(2*K))\n",
+    "# print range(t_0,T,(T-t_0)/(2*K))\n",
     "\n",
     "# end inputs\n",
     "qs=[]\n",
     "ps=[]\n",
     "us=[]\n",
     "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
-    "ts = range(t_0,T,(T-t_0)/(2*K))\n",
+    "ts = range(t_0,T+1,(T-t_0)/(2*K)) # go until T+1 because last value will be used as starting point for next window\n",
+    "print ts\n",
     "for i in range(len(ts)-1):\n",
     "    t_start, t_end = ts[i], ts[i+1]\n",
     "    qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
-    "    qpu_vec = qpu_vec_i[-1]\n",
-    "    print t_end\n",
-    "    qs.append(qpu_vec[:state_dim])\n",
-    "    ps.append(qpu_vec[state_dim:2*state_dim])\n",
-    "    us.append(qpu_vec[2*state_dim:])\n",
+    "    qpu_vec = qpu_vec_i[-1] # only need the last value\n",
+    "    if i == len(ts)-2 :\n",
+    "        pass \n",
+    "        # no need to append since weight = 0 for last value\n",
+    "    else:\n",
+    "        qs.append(qpu_vec[:state_dim])\n",
+    "        ps.append(qpu_vec[state_dim:2*state_dim])\n",
+    "        us.append(qpu_vec[2*state_dim:])\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 199,
    "metadata": {
     "collapsed": false
    },
@@ -276,7 +277,7 @@
        " array([19.03713547, 59.1114064 ])]"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 200,
    "metadata": {
     "collapsed": false
    },
@@ -300,7 +301,7 @@
        " array([-0.90081606, -0.75204015])]"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 200,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
@@ -322,13 +323,36 @@
        "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "us"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 204,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 53.4069695 , 162.22090851,  -0.96358004,  -0.90895009,\n",
+       "        -0.94537005])"
+      ]
+     },
+     "execution_count": 204,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "qpu_vec"
    ]
   },
   {
@@ -340,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 155,
    "metadata": {
     "collapsed": false
    },
@@ -364,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 156,
    "metadata": {
     "collapsed": false
    },
@@ -385,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 211,
    "metadata": {
     "collapsed": false
    },
@@ -394,17 +418,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([1.71656809, 7.14970426]), array([ 6.37867051, 21.13601153]), array([19.03713547, 59.1114064 ])]\n",
-      "[0.5, 1.0, 0.5]\n",
-      "[array([0.85828404, 3.57485213]), array([ 6.37867051, 21.13601153]), array([ 9.51856773, 29.5557032 ])]\n"
+      "2.0\n",
+      "[array([0.85828404, 3.57485213]), array([ 6.37867051, 21.13601153]), array([ 9.51856773, 29.5557032 ])]\n",
+      "[array([0.42914202, 1.78742606]), array([ 3.18933526, 10.56800577]), array([ 4.75928387, 14.7778516 ])]\n",
+      "[array([-0.13248132,  0.41879669]), array([-0.72993435, -0.32483587]), array([-0.45040803, -0.37602008])]\n",
+      "[array([-0.06624066,  0.20939835]), array([-0.36496717, -0.16241794]), array([-0.22520402, -0.18801004])]\n",
+      "[array([0.05127801]), array([-0.59490152]), array([-0.42561205])]\n",
+      "[array([0.02563901]), array([-0.29745076]), array([-0.21280602])]\n"
      ]
     }
    ],
    "source": [
-    "print qs\n",
-    "print weights[:-1]\n",
-    "qs_weighted = [q*w for q,w in zip(qs, weights[:-1])]\n",
-    "print qs_weighted"
+    "weights_total = sum(weights[:-1])\n",
+    "print weights_total\n",
+    "\n",
+    "for vec in [qs, ps, us]:\n",
+    "    qpus_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
+    "    print qpus_weighted\n",
+    "    qpus_normalized = [vec/weights_total for vec in qpus_weighted]\n",
+    "    print qpus_normalized\n",
+    "#     print qpus_weighted/weights_total\n",
+    "\n",
+    "#TODO: still need a way to package all the qs, ps, us into one object to return "
    ]
   },
   {
@@ -414,9 +449,7 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": [
-    "print 'okay, weights have been applied.  Now just remember that this DOES not include the first and last values because those have a weight of 0'"
-   ]
+   "source": []
   }
  ],
  "metadata": {
