made the triangle window filter modularized

--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -364,52 +364,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 215,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print K\n",
-    "weights_0 = [float(i)/K for i in range(1,K+1)]  \n",
-    "weights_1 = [2-(float(i)/K) for i in range(K+1,(2*K)+1)]\n",
-    "# sanity check \n",
-    "assert len(weights_0)==len(weights_1)\n",
-    "weights = weights_0+weights_1"
+    "def get_weights(K):\n",
+    "    weights_0 = [float(i)/K for i in range(1,K+1)]  \n",
+    "    weights_1 = [2-(float(i)/K) for i in range(K+1,(2*K)+1)]\n",
+    "    # sanity check \n",
+    "    assert len(weights_0)==len(weights_1)\n",
+    "    weights = weights_0+weights_1\n",
+    "    weights_total = sum(weights[:-1])\n",
+    "    return weights, weights_total"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 218,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0.5, 1.0]\n",
-      "[0.5, 0.0]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print weights_0\n",
-    "print weights_1"
+    "weights, weights_total = get_weights(K)\n",
+    "    \n",
+    "def apply_filter(vec, weights, weights_total):\n",
+    "    qpus_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
+    "    qpus_normalized = [vec/weights_total for vec in qpus_weighted]\n",
+    "    return qpus_normalized\n",
+    "\n",
+    "qs_normalized = apply_filter(qs,weights, weights_total)\n",
+    "ps_normalized = apply_filter(ps,weights, weights_total)\n",
+    "us_normalized = apply_filter(us,weights, weights_total)\n",
+    "#TODO: still need a way to package all the qs, ps, us into one object to return "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 212,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Now, wrap the triangle window filter into something nicer, like a function/module"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
    "metadata": {
     "collapsed": false
    },
@@ -418,28 +423,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.0\n",
-      "[array([0.85828404, 3.57485213]), array([ 6.37867051, 21.13601153]), array([ 9.51856773, 29.5557032 ])]\n",
       "[array([0.42914202, 1.78742606]), array([ 3.18933526, 10.56800577]), array([ 4.75928387, 14.7778516 ])]\n",
-      "[array([-0.13248132,  0.41879669]), array([-0.72993435, -0.32483587]), array([-0.45040803, -0.37602008])]\n",
       "[array([-0.06624066,  0.20939835]), array([-0.36496717, -0.16241794]), array([-0.22520402, -0.18801004])]\n",
-      "[array([0.05127801]), array([-0.59490152]), array([-0.42561205])]\n",
       "[array([0.02563901]), array([-0.29745076]), array([-0.21280602])]\n"
      ]
     }
    ],
    "source": [
-    "weights_total = sum(weights[:-1])\n",
-    "print weights_total\n",
-    "\n",
-    "for vec in [qs, ps, us]:\n",
-    "    qpus_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
-    "    print qpus_weighted\n",
-    "    qpus_normalized = [vec/weights_total for vec in qpus_weighted]\n",
-    "    print qpus_normalized\n",
-    "#     print qpus_weighted/weights_total\n",
-    "\n",
-    "#TODO: still need a way to package all the qs, ps, us into one object to return "
+    "print qs_normalized\n",
+    "print ps_normalized\n",
+    "print us_normalized"
    ]
   },
   {
