--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
        "array([1., 1.])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
        "array([ 1.71656809,  7.14970426, -0.26496265,  0.83759338,  0.10255603])"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -210,7 +210,7 @@
        "[0, 10]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +277,7 @@
        " array([19.03713547, 59.1114064 ])]"
       ]
      },
-     "execution_count": 199,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +301,7 @@
        " array([-0.90081606, -0.75204015])]"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +323,7 @@
        "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -346,7 +346,7 @@
        "        -0.94537005])"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -382,39 +382,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "weights, weights_total = get_weights(K)\n",
-    "    \n",
     "def apply_filter(vec, weights, weights_total):\n",
     "    qpus_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
     "    qpus_normalized = [vec/weights_total for vec in qpus_weighted]\n",
     "    return qpus_normalized\n",
     "\n",
+    "weights, weights_total = get_weights(K)\n",
     "qs_normalized = apply_filter(qs,weights, weights_total)\n",
     "ps_normalized = apply_filter(ps,weights, weights_total)\n",
-    "us_normalized = apply_filter(us,weights, weights_total)\n",
-    "#TODO: still need a way to package all the qs, ps, us into one object to return "
+    "us_normalized = apply_filter(us,weights, weights_total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Now, wrap the triangle window filter into something nicer, like a function/module"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
