--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -39,9 +39,11 @@
     "q_0 = np.array([0,2])\n",
     "p_0 = np.array([1,4])\n",
     "u_0 = np.array([2])\n",
+    "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
     "\n",
-    "t_start = 10\n",
-    "t_end =  11\n",
+    "t_0 = 0\n",
+    "T =  4\n",
+    "K=2\n",
     "\n",
     "integrateTol = 10**-3\n",
     "integrateMaxIter = 40\n",
@@ -52,28 +54,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1., 1.])"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.ones(np.shape(q_0))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -95,18 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def rhs(t, qpu_vec, **kwargs):\n",
-    "    '''\n",
-    "    Input: qpu_vec\n",
-    "    \n",
-    "    Output: qpu_vec\n",
-    "    '''\n",
     "    state_dim = kwargs['state_dim']\n",
     "    Gamma = kwargs['Gamma']\n",
     "    q = qpu_vec[:state_dim]\n",
@@ -120,151 +95,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 4 2]\n",
-      "[1 4]\n",
-      "[0 2 1 4 2]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print np.hstack([q_0, p_0, u_0])[2:]\n",
-    "print np.hstack([q_0, p_0, u_0])[2:2*2]\n",
-    "print np.hstack([q_0, p_0, u_0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# call the ode to integrate the dynamic equations to get q, p, and u"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ODE takes as input:\n",
-    "- RHS\n",
-    "- initial condition\n",
-    "- t_start and t_end for which you want your desired output values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
-    "qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.71656809,  7.14970426, -0.26496265,  0.83759338,  0.10255603])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# only take last value\n",
-    "qpu_vec_i[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 10]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "range(0,20,(20-0)/2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0, 1, 2, 3, 4]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# inputs\n",
-    "t_0 = 0\n",
-    "T = 4\n",
-    "K = 2\n",
-    "# print range(t_0,T,(T-t_0)/(2*K))\n",
+    "def propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma):\n",
+    "    qs=[]\n",
+    "    ps=[]\n",
+    "    us=[]\n",
     "\n",
-    "# end inputs\n",
-    "qs=[]\n",
-    "ps=[]\n",
-    "us=[]\n",
-    "qpu_vec = np.hstack([q_0, p_0, u_0])\n",
-    "ts = range(t_0,T+1,(T-t_0)/(2*K)) # go until T+1 because last value will be used as starting point for next window\n",
-    "print ts\n",
-    "for i in range(len(ts)-1):\n",
-    "    t_start, t_end = ts[i], ts[i+1]\n",
-    "    qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
-    "    qpu_vec = qpu_vec_i[-1] # only need the last value\n",
-    "    if i == len(ts)-2 :\n",
-    "        pass \n",
-    "        # no need to append since weight = 0 for last value\n",
-    "    else:\n",
-    "        qs.append(qpu_vec[:state_dim])\n",
-    "        ps.append(qpu_vec[state_dim:2*state_dim])\n",
-    "        us.append(qpu_vec[2*state_dim:])\n",
-    "        "
+    "    ts = range(t_0,T+1,(T-t_0)/(2*K)) # go until T+1 because last value will be used as starting point for next window\n",
+    "\n",
+    "    for i in range(len(ts)-1):\n",
+    "        t_start, t_end = ts[i], ts[i+1]\n",
+    "        qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qpu_vec = qpu_vec_i[-1] # only need the last value\n",
+    "        if i == len(ts)-2 :\n",
+    "            pass \n",
+    "            # no need to append since weight = 0 for last value.  but qpu_vec still needs to be updated.\n",
+    "        else:\n",
+    "            qs.append(qpu_vec[:state_dim])\n",
+    "            ps.append(qpu_vec[state_dim:2*state_dim])\n",
+    "            us.append(qpu_vec[2*state_dim:])\n",
+    "\n",
+    "    return qpu_vec, qs, ps, us\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -277,7 +150,7 @@
        " array([19.03713547, 59.1114064 ])]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -288,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -301,7 +174,7 @@
        " array([-0.90081606, -0.75204015])]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 23,
    "metadata": {
     "collapsed": false
    },
@@ -323,7 +196,7 @@
        "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -334,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -346,7 +219,7 @@
        "        -0.94537005])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -382,26 +255,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 57,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "def apply_filter(vec, weights, weights_total):\n",
-    "    qpus_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
-    "    qpus_normalized = [vec/weights_total for vec in qpus_weighted]\n",
-    "    return qpus_normalized\n",
+    "    vec_weighted = [val*w for val,w in zip(vec, weights[:-1])]\n",
+    "    vec_current = np.sum(vec_weighted,0)\n",
+    "    vec_normalized = vec_current/float(weights_total)\n",
+    "    return vec_normalized\n",
     "\n",
     "weights, weights_total = get_weights(K)\n",
-    "qs_normalized = apply_filter(qs,weights, weights_total)\n",
-    "ps_normalized = apply_filter(ps,weights, weights_total)\n",
-    "us_normalized = apply_filter(us,weights, weights_total)"
+    "q_bar = apply_filter(qs,weights, weights_total)\n",
+    "p_bar = apply_filter(ps,weights, weights_total)\n",
+    "u_bar = apply_filter(us,weights, weights_total)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 60,
    "metadata": {
     "collapsed": false
    },
@@ -410,16 +284,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[array([0.42914202, 1.78742606]), array([ 3.18933526, 10.56800577]), array([ 4.75928387, 14.7778516 ])]\n",
-      "[array([-0.06624066,  0.20939835]), array([-0.36496717, -0.16241794]), array([-0.22520402, -0.18801004])]\n",
-      "[array([0.02563901]), array([-0.29745076]), array([-0.21280602])]\n"
+      "[ 8.37776114 27.13328343]\n",
+      "[-0.65641185 -0.14102963]\n",
+      "[-0.48461778]\n",
+      "[array([1.71656809, 7.14970426]), array([ 6.37867051, 21.13601153]), array([19.03713547, 59.1114064 ])]\n",
+      "[array([-0.26496265,  0.83759338]), array([-0.72993435, -0.32483587]), array([-0.90081606, -0.75204015])]\n",
+      "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]\n"
      ]
     }
    ],
    "source": [
-    "print qs_normalized\n",
-    "print ps_normalized\n",
-    "print us_normalized"
+    "# outputs:\n",
+    "\n",
+    "print q_bar\n",
+    "print p_bar\n",
+    "print u_bar\n",
+    "\n",
+    "print qs\n",
+    "print ps\n",
+    "print us"
    ]
   },
   {
