--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -82,6 +82,7 @@
    "outputs": [],
    "source": [
     "def rhs(t, qpu_vec, **kwargs):\n",
+    "    # TODO: make sure that the functions that this calls are available\n",
     "    state_dim = kwargs['state_dim']\n",
     "    Gamma = kwargs['Gamma']\n",
     "    q = qpu_vec[:state_dim]\n",
@@ -133,99 +134,6 @@
    "outputs": [],
    "source": [
     "qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([1.71656809, 7.14970426]),\n",
-       " array([ 6.37867051, 21.13601153]),\n",
-       " array([19.03713547, 59.1114064 ])]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([-0.26496265,  0.83759338]),\n",
-       " array([-0.72993435, -0.32483587]),\n",
-       " array([-0.90081606, -0.75204015])]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ps"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([0.10255603]), array([-0.59490152]), array([-0.85122409])]"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "us"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 53.4069695 , 162.22090851,  -0.96358004,  -0.90895009,\n",
-       "        -0.94537005])"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "qpu_vec"
    ]
   },
   {
@@ -303,6 +211,69 @@
     "print qs\n",
     "print ps\n",
     "print us"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Sliding window (outer loop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# additional inputs \n",
+    "t_terminal = 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def sliding_window(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal):\n",
+    "    q_bars = []\n",
+    "    p_bars = []\n",
+    "    u_bars = []\n",
+    "    weights, weights_total = get_weights(K)\n",
+    "    t=t_0 # wall clock time\n",
+    "    qpu_vec = np.hstack([q_0, p_0, u_0])\n",
+    "    while t<t_terminal:\n",
+    "        \n",
+    "        qpu_vec, qs, ps, us = propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma)\n",
+    "        # qs, ps, and us will go to Mean Field somehow\n",
+    "\n",
+    "        q_bar = apply_filter(qs,weights, weights_total)\n",
+    "        p_bar = apply_filter(ps,weights, weights_total)\n",
+    "        u_bar = apply_filter(us,weights, weights_total)\n",
+    "        \n",
+    "        t+=1\n",
+    "        \n",
+    "        q_bars.append(q_bar)\n",
+    "        p_bars.append(p_bar)\n",
+    "        u_bars.append(u_bar)\n",
+    "\n",
+    "    return q_bars, p_bars, u_bars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "q_bars, p_bars, u_bars = sliding_window(t_0, T, K, q_0, p_0, u_0, state_dim, Gamma, t_terminal)"
    ]
   },
   {
