Started moving code from notebook into .py files.
added clp_init.py file which is where the inputs will
be listed.

--- a/Control_Law_Propagator.ipynb
+++ b/Control_Law_Propagator.ipynb
@@ -175,10 +175,10 @@
     "    vec_normalized = vec_current/float(weights_total)\n",
     "    return vec_normalized\n",
     "\n",
-    "weights, weights_total = get_weights(K)\n",
-    "q_bar = apply_filter(qs,weights, weights_total)\n",
-    "p_bar = apply_filter(ps,weights, weights_total)\n",
-    "u_bar = apply_filter(us,weights, weights_total)"
+    "# weights, weights_total = get_weights(K)\n",
+    "# q_bar = apply_filter(qs,weights, weights_total)\n",
+    "# p_bar = apply_filter(ps,weights, weights_total)\n",
+    "# u_bar = apply_filter(us,weights, weights_total)"
    ]
   },
   {
