Started writing unittests, but had to change a few things:     - Added an "if" in ode.py to catch when estimation error is zero     - started writing tests in the file sliding_window_utest.py,       but realized the need for a sliding window class in order to carry       around the funtions for the dynamics of p, q, and u.
Created the abstract base class, and an example
called SlidingWindowExample

--- a/Control_Law_Propagator_v2.ipynb
+++ b/Control_Law_Propagator_v2.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is v1 of the control law propagator\n",
+    "This is v2 of the control law propagator.\n",
+    "\n",
+    "The major update to the CLP is that there is an extra loop for propagation; Inside a single bucket, use a fixed step size and hold u constant while we propagate q and p.  Then, using those values for p and q, propagate u.\n",
+    "\n",
     "There will be three main modules:\n",
     "\n",
     "- 1) Propagator\n",
@@ -16,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -29,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -53,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -75,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -102,26 +105,58 @@
    },
    "outputs": [],
    "source": [
-    "def propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma):\n",
+    "def propagate_dynamics(t_0, T, K, qpu_vec, integrateTol, integrateMaxIter, state_dim, Gamma, n_s):\n",
+    "    '''\n",
+    "    n_s is number of steps\n",
+    "    '''\n",
     "    qs=[]\n",
     "    ps=[]\n",
     "    us=[]\n",
     "\n",
-    "    ts = range(t_0,T+1,(T-t_0)/(2*K)) # go until T+1 because last value will be used as starting point for next window\n",
+    "    ts = range(t_0,T+1,(T-t_0)/(2*K))  # go until T+1 because last value will be used as starting point for next window\n",
     "\n",
     "    for i in range(len(ts)-1):\n",
+    "        # starting value of u for a single bucket\n",
+    "        qp_vecs = propagate_q_p(u_0, q_0, p_0, n_s)\n",
+    "        u_vecs = propagate_u(u_0, q_0, p_0, n_s)\n",
+    "    \n",
+    "    return qp_vecs, u_vecs\n",
+    "\n",
+    "    # put qp_vecs and u_vecs back together\n",
+    "    '''\n",
+    "    return qpu_vec\n",
+    "\n",
     "        t_start, t_end = ts[i], ts[i+1]\n",
     "        qpu_vec_i, t, failFlag, iter_i = ode.ode_rk23(rhs, t_start, t_end, qpu_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
     "        qpu_vec = qpu_vec_i[-1] # only need the last value\n",
     "        if i == len(ts)-2 :\n",
-    "            pass \n",
-    "            # no need to append since weight = 0 for last value.  but qpu_vec still needs to be updated.\n",
+    "            pass\n",
+    "            # no need to append since weight = 0 for last value.  But qpu_vec still needs to be updated.\n",
     "        else:\n",
     "            qs.append(qpu_vec[:state_dim])\n",
     "            ps.append(qpu_vec[state_dim:2*state_dim])\n",
     "            us.append(qpu_vec[2*state_dim:])\n",
     "\n",
     "    return qpu_vec, qs, ps, us\n",
+    "    '''\n",
+    "    \n",
+    "def propagate_q_p(u_0, q_0, p_0, n_s):\n",
+    "    '''\n",
+    "    Propagate q and p to end of bucket using rk23\n",
+    "    '''\n",
+    "    qp_vecs = []\n",
+    "    qp_vec = [q_0, p_0]\n",
+    "    for n in range(n_s):\n",
+    "        n_start, n_end = \n",
+    "        qp_vec, t, failFlag, iter_i = ode.ode_rk23(rhs, n_start, n_end, qp_vec, integrateTol, integrateMaxIter, state_dim=state_dim, Gamma = Gamma)\n",
+    "        qp_vecs.append(qp_vec[-1])\n",
+    "    return qp_vecs\n",
+    "    \n",
+    "    \n",
+    "def propagate_u(u_0, q_0, p_0, n_s): \n",
+    "     '''\n",
+    "    '''\n",
+    "    \n",
     "    "
    ]
   },
